# Aetherion-v7

./: .coverage  .env  .env.example  API_REFERENCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.api  LICENCE.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  TASK_PROPOSALS.md  TERMS.md  aetherion-alerts.yml  alertmanager.yml  audit_bugs.md  docker-compose.yml  grafana-alert-notication.json  k8s-deployment.yml  main.py  nginx.conf  prometheus.yml  promtail-config.yml  pyproject.toml  requirements.txt
.GitHub/workflows/: ci.yml
.github/workflows/: main.yml  release-android.yml  release-desktop.yml
aetherion-desktop/: electron-builder.yml  main.js  package.json  preload.js
aetherion-mobile/: App.js  app.json  babel.config.js  eas.json  package.json
aetherion-mobile/src/api/: client.js
aetherion-mobile/src/screens/: Agents.js  Council.js  Dashboard.js  Login.js  Override.js  Task.js
agents/: __init__.py
agents/colleges/: __init__.py  all_collages.py  all_colleges.py  base.py
agents/council/: __init__.py  council.py
agents/governance/: __init__.py  curator.py  meta_orchestrator.py
agents/improvement/: __init__.py  self_improve.py
agents/interfaces/: __init__.py  interfaces.py
agents/missions/: __init__.py
agents/pipeline/: __init__.py  pipeline_agents.py
agents/services/: Dockerfile.agent  agent_client.py  agent_server.py
api/: __init__.py  celery_app.py  dependencies.py  idempotency.py  main.py  metrics.py  oauth_routes.py
api/middleware/: rate_limit.py
api/routers/: __init__.py  agent_catalog.py  agents.py  auth.py  compliance.py  constitution.py  council.py  oauth_routes.py  tasks.py  websocket.py
api/static/: index.html
api/static/assets/: index-D8-ofAKm.js
api/tasks/: agent_cache.py  celery_tasks.py  redis_state.py
core/: __init__.py  auth.py  memory.py  oauth.py  protocol.py  task_state.py  workspace.py
dashboard/: Dockerfile  index.html  package-lock.json  package.json
dashboard/src/: APP.jsx
dashboard/src/api/: client.js
dashboard/src/components/: AgentCaltlog.jsx  AgentCatalog.jsx  Agents.jsx  Login.jsx  Override.jsx  Tasks.jsx  agents.jsx  constitution.jsx  council.jsx  dashboard.jsx
dasnboard/: package.json
doc/: README.md  agents.md  architecture.md  changelog.md  compliance.md  council.md  deployment.md  developer-guide.md  security.md  user-guide.md
grafana/provisioning/dashboard/: aetherion-dashboard.json  aetherion-overview.json
logs/: aetherion_1784304444.jsonl  aetherion_1784304457.jsonl  aetherion_1784304458.jsonl
memory/: chroma.sqlite3
mission/: __init__.py  invention_pipeline.py  mission_agent.py
scripts/: audit_agents.py  backup.py  encrypt_secrets.py  generate_agent_services.py  generate_api_key.py  record_demo.py  restore.py
tests/: test_auth.py  test_council_security.py  test_curator.py  test_egress.py  test_experiment.py  test_extra_coverage.py  test_memory.py  test_oauth.py  test_orchestrator_override.py  test_sandbox.py  test_task_state.py
utils/: __init__.py  egress_proxy.py  logger.py  sandbox.py  seccomp_profile.json  secrets.py  tamper_log.py
