[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherion"
version = "3.1.0"
description = "Autonomous AI Research Institution with 70+ agents and a Supreme Council"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Aetherion Project Lead"}
]
keywords = ["ai", "multi-agent", "governance", "llm", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ollama>=0.1.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "schedule>=1.2.0",
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
    "pyaudio>=0.2.11",
    "Pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-xdist"]
dev = ["black", "isort", "flake8", "bandit"]

[project.scripts]
aetherion = "main:main"
